--- a/accounts/templates/accounts/admin_login.html
+++ b/accounts/templates/accounts/admin_login.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'accounts/layout.html' %}
+{% load static %}
 
-<head>
+{% block css %}
+{% endblock %}
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Admin - Login</title>
-
-    <!-- Custom fonts for this template-->
-    <link href="../vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="../css/sb-admin-2.css" rel="stylesheet">
-
-</head>
-
-<body class="bg-gradient-danger">
-
-    <div class="container">
-
-        <!-- Outer Row -->
+{% block main %}
         <div class="row justify-content-center">
 
             <div class="col-xl-10 col-lg-12 col-md-9">
@@ -52,14 +31,14 @@
                                                 id="exampleInputPassword" placeholder="Password">
                                         </div>
                                        
-                                        <a href="addref_vid.html" class="btn btn-danger btn-user btn-block">
+                                        <a href="{% url 'home' %}" class="btn btn-danger btn-user btn-block">
                                             Login
                                         </a>
                                        
                                     <hr>
                                    
                                     <div class="text-center">
-                                        <a class="small" href="signup.html">Create an Account!</a>
+                                        <a class="small" href="{% url 'admin_signup' %}" class="btn btn-">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
@@ -72,17 +51,7 @@
         </div>
 
     </div>
+{% endblock %}
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="../js/sb-admin-2.min.js"></script>
-
-</body>
-
-</html>
+{% block js %}
+{% endblock %}
