--- a/admin_app/templates/admin_app/dashboard.html
+++ b/admin_app/templates/admin_app/dashboard.html
@@ -56,7 +56,7 @@
             
                 <!-- Nav Item - Charts -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'dashboard' %}">
+                    <a class="nav-link" href="{% url 'admins_dashboard' %}">
                         <i class="fas fa-fw fa-chart-area"></i>
                         <span>Dashboard</span></a>
                 </li>
