--- a/blood_banks/templates/blood_banks/viewAnalysisofcamps.html
+++ b/blood_banks/templates/blood_banks/viewAnalysisofcamps.html
@@ -10,22 +10,22 @@
         <a class="nav-link" href="analysis.html">A+</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">A-</a>
+        <a class="nav-link" href="">A-</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">B+</a>
+        <a class="nav-link" href="">B+</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">B-</a>
+        <a class="nav-link" href="">B-</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">AB+</a>
+        <a class="nav-link" href="">AB+</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">AB-</a>
+        <a class="nav-link" href="">AB-</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
-        <a class="nav-link" href="analysis.html">O+</a>
+        <a class="nav-link" href="l">O+</a>
     </li>
     <li style="padding: 20px;background-color: rgb(197, 195, 195);margin-bottom: 10px">
         <a class="nav-link" href="analysis.html">O-</a>
