--- a/donors_requesters/templates/donors_requesters/editdonor.html
+++ b/donors_requesters/templates/donors_requesters/editdonor.html
@@ -16,7 +16,8 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Edit Donor/Requester!</h1>
                                         </div>
-                                        <form class="user">
+                                        <form class="user" action="">
+                                            {% csrf_token %}
                                             <div class="form-group ">
                                                 
                                                     <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -393,16 +394,10 @@
                                                 <input type="text" class="form-control form-control-user" id="exampleFirstName"
                                                         placeholder="Email">
                                             </div>
-                                                    <div class="form-group">
-                                                        <input type="number" class="form-control form-control-user" id="exampleFirstName"
-                                                           placeholder="Coins Earned" ></div>
-                                                    <div class="form-group">
-                                                
-                                                       Profile Picture:<span style="display:inline-block; width:160px;"></span><input type="file" id="myfile" accept="image/jpeg,image/png">                                   
-                                                </div> <hr>
+                                                 <hr>
                                                 
                                            
-                                            <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                            <button type="submit" class="btn btn-primary btn-user btn-block">
                                                 Edit Profile
                                             </a>
                                             <hr>
