--- a/accounts/templates/accounts/admin_signup.html
+++ b/accounts/templates/accounts/admin_signup.html
@@ -16,14 +16,11 @@
                         <h1 class="h4 text-gray-900 mb-4">Admin-Signup</h1>
                     </div>
                     <form class="user">
+                        {% csrf_token %}
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                    placeholder="First Name">
-                            </div>
-                            <div class="col-sm-6">
-                                <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                    placeholder="Last Name">
+                                    placeholder="Full Name">
                             </div>
                         </div>
                         <div class="form-group">
@@ -44,13 +41,13 @@
                                     id="exampleRepeatPassword" placeholder="Repeat Password">
                             </div>
                         </div>
-                        <a href="{% url 'admin_verify' %}" class="btn btn-danger btn-user btn-block">
+                        <button type="submit" class="btn btn-danger btn-user btn-block">
                             Register Account
                         </a>
                         
                     
                     <div class="text-center">
-                        <a class="small" href="{% url 'admin_login' %}">Already have an account? Login!</a>
+                        <a class="small" href="{% url 'admins_login' %}">Already have an account? Login!</a>
                     </div>
                 </div>
             </div>
