--- a/accounts/templates/accounts/bloodbanks_login.html
+++ b/accounts/templates/accounts/bloodbanks_login.html
@@ -20,6 +20,7 @@
                                 <h1 class="h4 text-gray-900 mb-4">Blood Bank-Login</h1>
                             </div>
                             <form class="user">
+                                {% csrf_token %}
                                 <div class="form-group">
                                     <input type="email" class="form-control form-control-user"
                                         id="exampleInputEmail" aria-describedby="emailHelp"
@@ -31,14 +32,14 @@
                                 </div>
                                 
                                 
-                                <a href="{% url 'viewbloodbank' %}" class="btn btn-danger btn-user btn-block">
+                                <button type="submit" class="btn btn-danger btn-user btn-block">
                                     Login
                                 </a>
                                 
                             <hr>
                             
                             <div class="text-center">
-                                <a class="small" href="{% url 'bloodbanks_signup' %}">Create an Account!</a>
+                                <a class="small" href="{% url 'blood_banks_signup' %}">Create an Account!</a>
                             </div>
                         </div>
                     </div>
