--- a/accounts/templates/accounts/hospital_signup.html
+++ b/accounts/templates/accounts/hospital_signup.html
@@ -17,6 +17,7 @@
                         <h1 class="h4 text-gray-900 mb-4">Hospital-Signup</h1>
                     </div>
                     <form class="user">
+                        {% csrf_token %}
                         <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
                                 <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -45,13 +46,13 @@
                                     id="exampleRepeatPassword" placeholder="Repeat Password">
                             </div>
                         </div>
-                        <a href="{% url 'hospital_verify' %}" class="btn btn-danger btn-user btn-block">
+                        <button type="submit" class="btn btn-danger btn-user btn-block">
                             Register Account
                         </a>
                         
                     
                     <div class="text-center">
-                        <a class="small" href="{% url 'hospital_signup' %}">Already have an account? Login!</a>
+                        <a class="small" href="{% url 'hospitals_login' %}">Already have an account? Login!</a>
                     </div>
                 </div>
             </div>
