--- a/blood_banks/templates/blood_banks/addbloodbank.html
+++ b/blood_banks/templates/blood_banks/addbloodbank.html
@@ -16,12 +16,9 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Add Blood Bank!</h1>
                         </div>
-                        <form class="user">
+                        <form class="user" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                        placeholder="User Name">
-                                </div>
                                 <div class="col-sm-6">
                                     <input type="text" class="form-control form-control-user" id="exampleLastName"
                                         placeholder="Blood Bank Name">
@@ -367,7 +364,7 @@
                     Certificate Of Accreditation:<span style="display:inline-block;"></span>   <input type="file" id="myfile">                                    
                 </div> 
                             
-                            <a href="{% url 'view_bloodbank' %}" class="btn btn-primary btn-user btn-block">
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
                                 Register Blood Bank
                             </a>
                             <hr>
