--- a/blood_banks/templates/blood_banks/addcamp.html
+++ b/blood_banks/templates/blood_banks/addcamp.html
@@ -16,7 +16,8 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Add Camp</h1>
                         </div>
-                        <form class="user">
+                        <form class="user" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-3">
                                     <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -75,7 +76,7 @@
                                             
                                                 
                                 </div>
-                            <a href="{% url 'view_camp' %}" class="btn btn-primary btn-user btn-block">
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
                                 Add
                             </a>
                             </div>
