--- a/blood_banks/templates/blood_banks/editcamp.html
+++ b/blood_banks/templates/blood_banks/editcamp.html
@@ -15,7 +15,8 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Edit-Camp</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" action="">
+                                {% csrf_token %}
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-3">
                                         <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -65,16 +66,7 @@
                                         <input type="text" class="form-control form-control-user" id="exampleLastName"
                                             placeholder="website-url">
                                     </div>
-                                    <div class="col-sm-12 mb-3 mb-sm-3">
-                                        <div class="custom-file mb-2">
-                                            <input type="file" class="custom-file-input" id="customFile" name="filename">
-                                            <label class="custom-file-label" for="customFile">Camp brochure</label>
-                                            </div>
-                                        
-                                                
-                                                    
-                                    </div>
-                                <a href="{% url 'view_camp' %}" class="btn btn-primary btn-user btn-block">
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
                                     EDIT
                                 </a>
                                 </div>
