--- a/donors_requesters/templates/donors_requesters/adddonor.html
+++ b/donors_requesters/templates/donors_requesters/adddonor.html
@@ -15,7 +15,8 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Add Donor/Requester!</h1>
                         </div>
-                        <form class="user">
+                        <form class="user" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group ">
                                 
                                     <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -403,7 +404,7 @@
                                 </div> <hr>
                                 
                             
-                            <a href="login.html" class="btn btn-primary btn-user btn-block">
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
                                 Register Profile
                             </a>
                             <hr>
