--- a/donors_requesters/templates/donors_requesters/addrequestforblood.html
+++ b/donors_requesters/templates/donors_requesters/addrequestforblood.html
@@ -17,7 +17,8 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Add Blood Request</h1>
                                         </div>
-                                        <form class="user">
+                                        <form class="user" action="" enctype="multipart/form-data">
+                                            {% csrf_token %}
                                             <div class="form-group">
                                                 <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                                                     placeholder="Email Address" required>
@@ -88,7 +89,7 @@
                                                 </div>
                                             </div>
 
-                                            <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                            <button type="submit" class="btn btn-primary btn-user btn-block">
                                                 Add Request
                                             </a>
                                           
