--- a/hospitals/templates/hospitals/addhospital.html
+++ b/hospitals/templates/hospitals/addhospital.html
@@ -16,12 +16,9 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Add Hospital!</h1>
                         </div>
-                        <form class="user">
+                        <form class="user" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                        placeholder="User Name">
-                                </div>
                                 <div class="col-sm-6">
                                     <input type="text" class="form-control form-control-user" id="exampleLastName"
                                         placeholder="Hospital Name">
@@ -377,8 +374,8 @@
                     Certificate Of Accreditation:<span style="display:inline-block;"></span>   <input type="file" id="myfile">                                    
                 </div> 
                             
-                            <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                Register Profile
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                Add Hospital
                             </a>
                             <hr>
                             
